--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "^4.15.2",
+    "node-json-db": "^0.9.0",
     "socket.io": "^1.7.3"
   },
   "scripts": {
